Input/Output exercise completed

--- a/Exercises/Input-Output/Makefile
+++ b/Exercises/Input-Output/Makefile
@@ -1,14 +1,42 @@
 CXXFLAGS = -std=c++23 -O0 -ffast-math
 LDLIBS = -lstdc++ -lm
-Out.txt: main.exe
-	./main.exe -n 1 -n 2 -n 3 -n 4 -n 5 > Out.txt
-main.exe: objects/main.o 
+
+all: Out-CommandLine.txt Out-StandardInputStream.txt Out-FileStreams.txt
+
+Out-CommandLine.txt: CommandLine
+	./$< -n 1 -n 2 -n 3 -n 4 -n 5 > $@
+
+Out-StandardInputStream.txt: StandardInputStream
+	echo 1 2 3 4 5 | ./$< > $@
+
+Out-FileStreams.txt: FileStreams
+	./$< --input input.txt --output $@
+
+
+CommandLine: objects/CommandLine.o 
 	$(CXX) $(LDFLAGS) $^ $(LDLIBS) -o $@
-objects/main.o: src/main.cpp
+
+objects/CommandLine.o: src/CommandLine.cpp
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c $(filter %.cpp,$^) -o $@
 
+
+StandardInputStream: objects/StandardInputStream.o 
+	$(CXX) $(LDFLAGS) $^ $(LDLIBS) -o $@
+
+objects/StandardInputStream.o: src/StandardInputStream.cpp
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c $(filter %.cpp,$^) -o $@
+
+FileStreams: objects/FileStreams.o 
+	$(CXX) $(LDFLAGS) $^ $(LDLIBS) -o $@
+
+objects/FileStreams.o: src/FileStreams.cpp
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c $(filter %.cpp,$^) -o $@
+
+
+
+
 clean:
-	$(RM) [Oo]ut* *.exe objects/*.o
+	$(RM) [Oo]ut* CommandLine StandardInputStream FileStreams objects/*.o
 test:
 	@echo "CXX:" $(CXX)
 	@echo "RM:" $(RM)
