Linear equations part A completed

--- a/Homework/LinearEquations/Makefile
+++ b/Homework/LinearEquations/Makefile
@@ -1,4 +1,4 @@
-# Makefile for Vector and Matrix classes
+# Makefile for Vector, Matrix, and QR classes
 
 # Compiler and flags
 CXX = g++
@@ -7,6 +7,7 @@ CXXFLAGS = -std=c++11 -Wall -Wextra
 # Source files
 VECTOR_SRC = vector.cpp
 MATRIX_SRC = matrix.cpp
+QR_SRC = QR.cpp # Assuming your QR class is in qr.cpp
 
 # Header files
 VECTOR_HDR = vector.h
@@ -15,16 +16,17 @@ MATRIX_HDR = matrix.h
 # Object files
 VECTOR_OBJ = vector.o
 MATRIX_OBJ = matrix.o
+QR_OBJ = QR.o
 
 # Executable name
-TARGET = my_program
+TARGET = main
 
 # Default target
 all: $(TARGET)
 
 # Create executable
-$(TARGET): $(VECTOR_OBJ) $(MATRIX_OBJ)
-	$(CXX) $(CXXFLAGS) $(VECTOR_OBJ) $(MATRIX_OBJ) -o $(TARGET)
+$(TARGET): $(VECTOR_OBJ) $(MATRIX_OBJ) $(QR_OBJ)
+	$(CXX) $(CXXFLAGS) $(VECTOR_OBJ) $(MATRIX_OBJ) $(QR_OBJ) -o $(TARGET)
 
 # Compile vector.cpp to vector.o
 $(VECTOR_OBJ): $(VECTOR_SRC) $(VECTOR_HDR) $(MATRIX_HDR)
@@ -34,9 +36,13 @@ $(VECTOR_OBJ): $(VECTOR_SRC) $(VECTOR_HDR) $(MATRIX_HDR)
 $(MATRIX_OBJ): $(MATRIX_SRC) $(MATRIX_HDR) $(VECTOR_HDR)
 	$(CXX) $(CXXFLAGS) -c $(MATRIX_SRC) -o $(MATRIX_OBJ)
 
+# Compile qr.cpp to qr.o
+$(QR_OBJ): $(QR_SRC) $(VECTOR_HDR) $(MATRIX_HDR)
+	$(CXX) $(CXXFLAGS) -c $(QR_SRC) -o $(QR_OBJ)
+
 # Clean object files and executable
 clean:
-	rm -f $(VECTOR_OBJ) $(MATRIX_OBJ) $(TARGET)
+	rm -f $(VECTOR_OBJ) $(MATRIX_OBJ) $(QR_OBJ) $(TARGET)
 
 # Phony targets
 .PHONY: all clean
