All exercises completed

--- a/Exercises/Complex/Makefile
+++ b/Exercises/Complex/Makefile
@@ -1,15 +1,26 @@
+# Makefile for complex numbers exercise
+
+# Compilers and flags
+CXX = g++
 CXXFLAGS = -Wall -O3 -ffast-math
 LDLIBS = -lstdc++ -lm
-Out.txt : main
+
+# Source file
+MAIN_SRC = main.cpp
+
+# Object files
+MAIN_OBJ = main.o
+
+# Executable name
+TARGET = main
+
+# Default target
+all: $(TARGET)
 	./main > Out.txt
-main: objects/main.o
-	$(CXX) $(LDFLAGS) $^ $(LDLIBS) -o $@
-objects/main.o: src/main.cpp
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c $(filter %.cpp,$^) -o $@
+
+# Create executable
+$(TARGET) : $(MAIN_OBJ)
+	$(CXX) $(CXXFLAGS) $(MAIN_OBJ) -o $(TARGET)
 
 clean:
-	$(RM) [Oo]ut* main objects/*.o
-test:
-	@echo "CXX:" $(CXX)
-	@echo "RM:" $(RM)
-	@echo "LDFLAGS:" $(LDFLAGS)
+	rm -f Out.txt $(MAIN_OBJ) $(TARGET)
