--- a/Exercises/HelloWorld/Makefile
+++ b/Exercises/HelloWorld/Makefile
@@ -1,17 +1,34 @@
+# Hello World
+
+# Compiler and flags
 CXXFLAGS = -Wall -O3 -ffast-math
 LDLIBS = -lstdc++ -lm
 
-Out.txt : main
+# Source files
+MAIN_SRC = main.cpp
+HELLO_SRC = hello.cpp
+
+# Header files
+HELLO_HDR = hello.h
+
+# Object files
+MAIN_OBJ = main.o
+HELLO_OBJ = hello.o
+
+# Executable name
+TARGET = main
+
+all: $(TARGET) 
 	./main > Out.txt
-main: objects/main.o objects/hello.o
-	$(CXX) $(LDFLAGS) $^ $(LDLIBS) -o $@
-objects/main.o: headers/hello.h src/main.cpp
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c $(filter %.cpp,$^) -o $@
-objects/hello.o: headers/hello.h src/hello.cpp
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -o $@ -c $(filter %.cpp,$^)
+
+$(TARGET) : $(MAIN_OBJ) $(HELLO_OBJ)
+	$(CXX) $(CXXFLAGS) $(MAIN_OBJ) $(HELLO_OBJ) -o $(TARGET)
+
+$(MAIN_OBJ) : $(MAIN_SRC) $(HELLO_HDR)
+	$(CXX) $(CXXFLAGS) -c $(MAIN_SRC) -o $(MAIN_OBJ)
+
+$(HELLO_OBJ) : $(HELLO_SRC) $(HELLO_HDR)
+	$(CXX) $(CXXFLAGS) -c $(HELLO_SRC) -o $(HELLO_OBJ)
 clean:
-	$(RM) [Oo]ut* main objects/*.o
-test:
-	@echo "CXX:" $(CXX)
-	@echo "RM:" $(RM)
-	@echo "LDFLAGS:" $(LDFLAGS)
+	rm -f Out.txt $(MAIN_OBJ) $(HELLO_OBJ) $(TARGET)
+
